# WRag

./: .gitignore  Dockerfile.ollama  Makefile  README.md  config.yml  docker-compose.yml  jaeger-sampling.json  rebuild_frontend.sh  techdesign.md
backend/: Dockerfile.base  Dockerfile.indexing  Dockerfile.query  README.md  pyproject.toml  pytest.ini  requirements.txt  run_tests.bat  test_pipeline.py
backend/src/common/: __init__.py  api_utils.py  config.py  document_store.py  file_manager.py  models.py  pipeline_loader.py
backend/src/indexing/: main.py  mysql_document_writer.py  service.py
backend/src/pipelines/: __init__.py  index_pipeline.py  query_pipeline.py
backend/src/query/: main.py  serializer.py  service.py
backend/src/utils/: __init__.py  metrics.py  tracing.py
backend/tests/: conftest.py  run_mysql_tests.py  test_indexing_api.py  test_indexing_service.py  test_query_api.py  test_query_service.py
backend/tests/common/: __init__.py  test_config.py  test_document_store.py  test_file_manager.py
backend/tests/indexing/: test_main.py  test_mysql_document_writer.py
backend/tests/pipelines/: test_index_pipeline.py
backend/tests/query/: test_main.py
charts/: Chart.yaml  README.md  values.schema.json  values.yaml
frontend/: Dockerfile.frontend  package-lock.json  package.json
mysql/: clear_tables.sql  recreate_tables.sql
nginx/: nginx-frontend.conf  nginx-proxy.conf
prometheus/: prometheus.yml
scripts/: build_base.bat  build_services.bat  clean.bat  rebuild_app_services.bat  restart_backend_services.bat  run_tests.bat  start-ollama-unix.sh  (+3 more)
(+34 files in other folders)
